k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knockips-deployment
  namespace: knockips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: knockips
  template:
    metadata:
      labels:
        app: knockips
    spec:
      hostNetwork: true
      containers:
      - name: knockips-container
        image: rjboezeman/knockips:v0.3.1
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: shorewall-log
          mountPath: /var/log/
        - name: geoip-country
          mountPath: /usr/share/GeoIP/GeoLite2-Country.mmdb
        - name: geoip-city
          mountPath: /usr/share/GeoIP/GeoLite2-City.mmdb
        - name: geoip-asn
          mountPath: /usr/share/GeoIP/GeoLite2-ASN.mmdb
        - name: sqllite-db
          mountPath: /tmp/firewall-logs.db
        securityContext:
          capabilities:
            add: [ "NET_ADMIN", "SYS_MODULE" ]
      volumes:
      - name: shorewall-log
        hostPath:
          path: /var/log/
          type: Directory
      - name: geoip-country
        hostPath:
          path: /usr/share/GeoIP/GeoLite2-Country.mmdb
          type: File
      - name: geoip-city
        hostPath:
          path: /usr/share/GeoIP/GeoLite2-City.mmdb
          type: File
      - name: geoip-asn
        hostPath:
          path: /usr/share/GeoIP/GeoLite2-ASN.mmdb
          type: File
      - name: sqllite-db
        hostPath:
          path: /tmp/firewall-logs.db
          type: FileOrCreate
