k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knockips-service
spec:
  selector:
    app: knockips
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 8000
  type: ClusterIP
